# USTB-Course

./: LICENSE  README.md
大一/程序设计实践/bank_system/03_credit account/: account.cpp  savingaccount.cpp
大一/程序设计实践/哈利波特检索/: 哈利波特检索实验报告-陶宇轩.docx
大一/程序设计实践/哈利波特检索/code/Harry_Potter_Search_QT/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
大一/程序设计实践/哈利波特检索/code/Harry_base/: CMakeLists.txt  main.cpp
大一/程序设计实践/简单的飞机大战/: ~$的飞机大战游戏设计.docx  简单的飞机大战游戏设计.docx
大一/程序设计实践/简单的飞机大战/code/: CMakeLists.txt  Plane.cpp  Plane.h  main.cpp
大一/程序设计实践/银行系统/: ~$账户实验报告-陶宇轩.docx  贝壳_程序设计实践_银行系统.pptx  银行账户实验报告-陶宇轩.docx
大一/程序设计实践/银行系统/code/: CMakeLists.txt  account.cpp  account.h  accountrecord.cpp  accountrecord.h  accumulator.cpp  accumulator.h  combobox.cpp  combobox.h  creditaccount.cpp  creditaccount.h  date.cpp  date.h  icon.qrc  login.cpp  login.h  login.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  savingaccount.cpp  savingaccount.h
大一/程序设计实践/飞机大战完善/code/: CMakeLists.txt  bomb.cpp  bomb.h  bullet.cpp  bullet.h  bullettool.cpp  bullettool.h  config.h  enemyplane.cpp  enemyplane.h  heroplane.cpp  heroplane.h  main.cpp  mainscene.cpp  mainscene.h  mainscene.ui  map.cpp  map.h  res.qrc
大二/Data and Algorithms/Coursework/LinearList_Stack/: 客观题.md
大二/Data and Algorithms/Coursework/Tree/: 客观题.md  简答题1.ods
大二/Data and Algorithms/Coursework/Tree/BalanceTree/: AVLTree.h  AVLTree2.h  BSTree.h  BSTree2.h  BalanceTree.vcxproj  CMakeLists.txt  RBTree.cpp  RBTree.h  RBTree2.h  RBTree3.h  StlSet.h  TestTree.cpp  Tree.h  btree.sln  btree.vcxproj
大二/Data and Algorithms/Coursework/Tree/BalanceTree/x64/Debug/: BalanceTree.exe.recipe  BalanceTree.ilk  vc143.idb
大二/Data and Algorithms/Coursework/Tree/BalanceTree/x64/Debug/BalanceTree.tlog/: BalanceTree.lastbuildstate  CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
大二/Data and Algorithms/Coursework/Tree/Code/: huffman  (+1 more)
大二/Data and Algorithms/LinearList_Stack/: 1. 栈的应用.md  3. 斐波那契编码.md  客观题.md
大二/Data and Algorithms/LinearList_Stack/Code/: Application_of_stacks  Application_of_stacks.cpp  CMakeLists.txt  Fibonacci_code  Fibonacci_code.cpp  Suffix_expressions.cpp
大二/Data and Algorithms/LinearList_Stack/实验报告/: 1. 栈的应用.md  2. Postfix expression 2025.md  3. 斐波那契编码.md  4. 线性表编程实验2025.md  模版.md
大二/Data and Algorithms/Note/: 树.md  线性数据结构.md  队列.md
大二/Python 程序设计/code/: 2.md  2025年python程序设计第一次作业-海龟绘图.md  Tyx_U202342641.py  my_turtle.py  task_01.py
大二/python程序设计/code/: task_01.py
大二/报告集合/: AM发射机参考.ms14  ~$通信原理.docx  发射机仿真报告.docx
大二/课件/后缀表达式代码/: 后缀表达式-深搜剪枝.cpp  后缀表达式-直接计算.cpp
大二/课本/: 01.py
大二/金工实习/: 《金工实习》复习题集--2020.docx  复习题集--2020（答案）.docx
大二/马原-习题和试卷/习题和试卷/: 马克思主义基本原理考试题库.doc
大二/马原-习题和试卷/习题和试卷/0马原各章习题/: ~$绪论章练习题.doc  第一章 世界的物质性及其发展规律.doc  第七章 共产主义崇高理想及其实现.doc  第三部分 论述题部分.doc  第四章  资本主义的形成及其本质.doc  绪论章练习题.doc
大二/马原-习题和试卷/习题和试卷/马克思主义基本原理概论复习资料/: 马克思主义基本原理复习资料 .doc
大二/马原/0马原各章习题/: ~$章 世界的物质性及其发展规律.doc  复习指南及复习重点.doc  模拟试卷一及参考答案.doc  模拟试卷二及参考答案.doc  第三章 人类社会及其发展规律.doc  第二章 认识的本质及其发展规律.doc  第五章 资本主义的发展及其趋势.doc  第六章 社会主义的发展及其规律.doc
大二/马原/马克思主义基本原理概论复习资料/: 马克思主义基本原理概论讲义.doc
大二/马原/马克思主义基本原理概论复习资料/各种题+卷/: 马哲参考习题及答案（参考）.doc
(+19 files in other folders)
